--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,29 @@
 language: go
+
 sudo: required
+
+env:
+  global:
+  - NODE_ENV=test
+  - PGPORT=5433
+  - PGHOST=localhost
+
 services:
   - postgresql
+
 addons:
-  postgresql: '9.5'
+  apt:
+    sources:
+    - precise-pgdg-9.5
+    packages:
+    - postgresql-9.5
+    - postgresql-contrib-9.5
+    - postgis
+  postgresql: 9.5
+
 before_script:
-  - sudo /etc/init.d/postgresql stop
-  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
-  - sudo apt-get update
-  - sudo apt-get install postgresql-9.5 -y
-  - sudo /etc/init.d/postgresql start  - 
+  - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
+  - sudo /etc/init.d/postgresql restart
   - createdb testdb -U postgres
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
