--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before_script:
   - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
   - sudo /etc/init.d/postgresql restart
   - createdb testdb -U postgres
-  - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
-  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
-  - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
+  # - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
+  # - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
+  # - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
