--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: go
+sudo: required
+dist: trusty
+addons:
+  postgresql: "9.5"
+before_script:
+  - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
+  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
+  - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
