try pip with sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: dart
 
+sudo: required
+
 before_install:
   - nvm install 6.9.1
   - nvm use 6.9.1
-  - pip install httpbin
+  - sudo pip install httpbin
 
 script:
   - dart --version
