--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
-language: go
+language: python
+
+before_install:
+  - wget https://gist.github.com/kulshekhar/cd0bd02a87d18a2cbb3bce6128b3187d/raw/0a77d6c0f555de47b5b47000533543b37d28bf57/release-http-mocker.py
+  - wget https://github.com/kulshekhar/http-mocker/releases/download/latest/http-mocker-ubuntu
+  - chmod +x http-mocker-ubuntu
+
+script:
+  - cat release-http-mocker.py
+  - ./http-mocker-ubuntu & &> /dev/null 
+  - curl -X POST -H "Content-Type: application/json" -d '{"response":{"message": "good one"}, "statusCode": 200}' -i http://localhost:18000/
