--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,9 @@ services:
   - postgresql
 
 addons:
-  apt:
-    sources:
-    - precise-pgdg-9.5
-    packages:
-    - postgresql-9.5
-    - postgresql-contrib-9.5
-    - postgis
-  postgresql: 9.5
+  postgresql: '9.5'
 
 before_script:
-  - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
-  - sudo /etc/init.d/postgresql restart
-  - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres -p PGPORT
-  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database -p PGPORT
-  - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database -p PGPORT
+  - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
+  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
+  - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
