--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: go
 dist: precise
 sudo: false
 services:
@@ -9,3 +8,6 @@ before_script:
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
   - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
+script:
+  - ls
+  
