--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: trusty
 node_js:
 - '4.5'
 - '6.1'
+services:
+  - postgresql
+  - redis-server
+  - docker
 addons:
   postgresql: "9.5"
 before_script:
