--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-language: node_js
 dist: trusty
-node_js:
-- '4.5'
-- '6.1'
 services:
   - postgresql
+  - redis-server
+  - docker
 addons:
   postgresql: "9.5"
 before_script:
