--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 dist: trusty
-sudo: required
-services:
-  - docker
 addons:
-  postgresql: "9.5"
+  postgresql: 9.5
+  apt_packages:
+  - docker-engine
 before_script:
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
