--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ before_script:
   - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
 script:
   - ls
+  - docker --version
