--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 dist: trusty
+services:
+  - docker
 addons:
-  postgresql: 9.5
-  apt_packages:
-  - docker-engine
+  postgresql: "9.5"
 before_script:
   - sudo /etc/init.d/docker stop
+  - docker --version
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
   - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
