--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,9 @@ addons:
   apt_packages:
   - postgis
 before_script:
-  - sudo /etc/init.d/docker stop
-  - docker --version
+  - apt-cache policy postgis
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
   - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
 script:
   - ls
-  - docker --version
