--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ services:
   - docker
 addons:
   postgresql: "9.5"
+  apt_packages:
+  - postgis
 before_script:
   - apt-cache policy postgis
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
