--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 addons:
   postgresql: "9.5"
   apt_packages:
-  - postgis
+  - postgresql-9.5-postgis-2.3
 before_script:
   - apt-cache policy postgis
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
