--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ services:
 addons:
   postgresql: "9.5"
   apt_packages:
-  - postgis
+  - postgresql-9.5-postgis-2.3
 before_script:
-  - apt-cache policy postgis
-  - psql -c 'alter extension postgis update to "2.3.0";' -U postgres
   - psql -c 'create database parse_server_postgres_adapter_test_database;' -U postgres
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d parse_server_postgres_adapter_test_database
   - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d parse_server_postgres_adapter_test_database
